<resources>
    <string name="app_name">JapaneseApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="chinese">English</string>
    <string name="japanese">Japanese</string>
    <string name="recognize">Recognize</string>
    <string name="clear">Clear</string>
    <string name="writeHere">Write here.</string>
    <string name="hkpratice">Quiz</string>
    <string name="notepadtxt">Notepad</string>
    <string name="textdrawkanji">Handwriting Kanji</string>
    <string name="dictext">Dictionary</string>
    <string name="kanjitext">Kanji</string>
    <string name="txtcard1">It will be displayed the kunyomi(japanese origin) and onyomi(chinese origin) of each kanji with its respective meaning. Click Next.</string>
    <string name="bt">Next</string>

    <string name="youtube"><b>JMASTER Version 1.0</b></string>

    <string name="menu_home">JMASTER </string>
    <string name="menu_gallery">Stories</string>
    <string name="story1"><b>STORY 1</b></string>
    <string name="story2"><b>STORY 2</b></string>

    <string name="mainstories">In this page you can read some stories to practice your reading abilities. If you press the story above you will get the full translations of the stories. \n ⚠ Rotate the phone for better reading experience.</string>

    <string name="menu_slideshow">Listening exercises</string>
    <string name="menu_scripts">Scripts</string>
    <string name="menu_share">Share</string>
    <string name="menu_tittle">Communicate</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About</string>
    <string name="sharetxt"><u>SHARE</u></string>


    <string name="channel1">1) Benjiro - Beginner Japanese</string>
    <string name="channel2">2) もしもしゆうすけ</string>

    <string name="buttontext">Audio Scripts 1</string>
    <string name="buttontext1">Audio Scripts 2</string>

    <string name="mainscripts">Here you can find correct transcripts from youtube videos which are spoken in japanese. Now, whenever you misunderstood something during your listening practice, you can check here.</string>

    <string name="keywordtxt1">Question 1 \n\n 医者(isha):doctor \n 病気(byōki):sick \n 前(mae):before \n 質問(shitsumon):question \n 行く(iku):go \n 部屋(heya):room \n 答えてください(kotaete kudasai):please answer \n 呼びます(yobimasu):call \n</string>
    <string name="keywordtxt2">Question 2 \n\n コート(kooto):coat \n どれ(dore):which \n 先に(saki ni):first,earlier \n 帰る(kaeru):return,go home \n 白い(shiroi):white \n 長い(nagai):long \n ポケット(poketto):pocket \n</string>
    <string name="keywordtxt3">Question 3 \n\n お姉さん(oneesan):elder sister \n 人(hito):person \n あそこ(asoko):there \n 欠けている(kakete iru):lacking,missing \n 履く(haku):to wear lower-body clothing \n 眼鏡(megane):glasses \n</string>
    <string name="keywordtxt4">Question 4 \n\n 美術館(bijutsukan):museum \n 人(hito):person \n 切符(kippu):ticket \n ずつ並んで(side by side):lacking,missing \n 並びます(narabimasu):line up \n 入り口(iriguchi):entrance \n 方へ進んで(kata he susunde):proceed towards \n</string>
    <string name="keywordtxt5">Question 5 \n\n 見学会(kengaku kai):tour \n 出発します(shuppatsu shimasu):will depart \n 財布(saifu):wallet \n お昼(ohiru):lunch \n 集まって(atsumatte):gather \n 必要(hitsuyo):required,necessary \n  記録(kiroku):record \n 一つずつ(hitotsuzutsu):one by one \n 持ってきて(motte kite):bring \n 用意します(yoishimasu):prepare \n 傘(kasa):umbrella \n</string>


    <string name="keywordtext"><u>Key Words</u></string>
    <string name="question1">⚠ The correction of the option you selected is on the key words page.</string>
    <string name="question">question</string>


    <string name="playtext">Play</string>
    <string name="pausetext">Pause</string>
    <string name="mainaudio">Here you can do multiple choice questions to test your listening comprehension.In case you have difficulties with a word, you can see the key words of each audio by click on the underlined text.</string>

    <string name="button1">a.</string>
    <string name="button2">b.</string>
    <string name="button3">c.</string>
    <string name="button4">d.</string>


</resources>