<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_book_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_volume_up_24"
            android:title="@string/menu_slideshow" />
        <item
        android:id="@+id/nav_scripts"
        android:icon="@drawable/ic_baseline_article_24"
        android:title="@string/menu_scripts" />

        <item android:title="@string/menu_tittle">
            <menu>
                <item android:id="@+id/nav_share"
                    android:icon="@drawable/ic_baseline_share_24"
                    android:title="@string/menu_share"/>
                <item android:id="@+id/nav_feedback"
                    android:icon="@drawable/ic_baseline_feedback_24"
                    android:title="@string/menu_feedback"/>
                <item android:id="@+id/nav_about"
                    android:icon="@drawable/ic_baseline_info_24"
                    android:title="@string/menu_about"/>
            </menu>
        </item>

    </group>

</menu>