<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_scripts"
        android:name="com.example.japaneseapp.ui.scripts.ScriptsFragment"
        android:label="@string/menu_scripts"
        tools:layout="@layout/scripts_fragment" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.japaneseapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/share_fragment" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.japaneseapp.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/about_fragment" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.japaneseapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.japaneseapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.japaneseapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>