<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:orientation="vertical"
    tools:context=".ui.scripts.ScriptsFragment">

    <TextView
        android:id="@+id/textmainscripts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainscripts"
        android:textSize="15sp"
        android:textAlignment="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="3.7dp"
        android:background="@color/gold"
        android:layout_margin="2dp"/>


    <TextView
        android:id="@+id/textbenjiro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/channel1" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttontext"
        />

</LinearLayout>