<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".ui.slideshow.SlideshowFragment">
    <TextView
        android:id="@+id/textmainslideshow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainaudio"
        android:textSize="12sp"
        android:textAlignment="center">
    </TextView>

    <View
        android:layout_width="match_parent"
        android:layout_height="3.7dp"
        android:background="@color/gold"
        android:layout_margin="2dp"/>

    <TextView
        android:id="@+id/keywords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/keywordtext" />

    <TextView
        android:id="@+id/audio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/question1" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_height="match_parent"
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"/>
</LinearLayout>