<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCanvas"
    android:id="@+id/background"
    tools:context=".DrawKanji">

        <RadioGroup
            android:id="@+id/languageGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/chinese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/chinese"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/japanese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/japanese"
                android:textColor="@color/white" />
        </RadioGroup>

    <com.example.japaneseapp.Drawing
        android:id="@+id/draw_area"
        android:layout_width="400dp"
        android:layout_height="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageGroup"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/draw_area">

        <Button
            android:id="@+id/recognize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:text="@string/recognize" />

        <Button
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:text="@string/clear" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>