<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.gallery.GalleryFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/storiesinfo"
        android:textSize="12sp"
        android:text="@string/mainstories"
        android:textAlignment="center"
        >

    </TextView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/storytitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/story1"
                android:background="#9BB9C8"
                android:textSize="20sp" />


            <ImageView
                android:id="@+id/story1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/story1pic">

            </ImageView>
            <ImageView
                android:id="@+id/story2"
                android:layout_marginStart="-7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/story2">
            </ImageView>
            <ImageView
                android:id="@+id/story3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginStart="-6dp"
                android:src="@drawable/story3">
            </ImageView>

            <ImageView
                android:id="@+id/story4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/story4">
            </ImageView>
            <ImageView
                android:id="@+id/story5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/story5">
            </ImageView>
            <TextView
                android:id="@+id/storytitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/story2"
                android:background="#9BB9C8"
                android:textSize="20sp" />
            <ImageView
                android:id="@+id/story6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/storyp2">
            </ImageView>


        </LinearLayout>
    </ScrollView>
</LinearLayout>