<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundhome"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:gravity="center"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/kanjicard"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#2D2D2D"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="65dp"
                    android:src="@drawable/ic_calligraphy"
                    android:layout_gravity="center"
                    android:layout_marginBottom="4dp"

                    />

                <TextView
                    android:id="@+id/textkanji"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kanjitext"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/carddic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#2D2D2D"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:src="@drawable/languagesicon"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    />

                <TextView
                    android:id="@+id/textdic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dictext"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="230dp"
        android:gravity="center"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/kanapratice"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#2D2D2D"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="65dp"
                android:src="@drawable/ic_trophy"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                />
            <TextView
                android:id="@+id/iconhk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hkpratice"
                android:textAlignment="center"
                android:textColor="@color/white"
                 />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardnotepad"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#2D2D2D"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:src="@drawable/notepadicon"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    />

                <TextView
                    android:id="@+id/textnotepad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notepadtxt"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="400dp"
        android:gravity="center"
        >
    <androidx.cardview.widget.CardView
        android:id="@+id/drawkanji"
        android:layout_width="310dp"
        android:layout_height="120dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#2D2D2D"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:src="@drawable/search"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:id="@+id/textdrawkanji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textdrawkanji"
            android:textAlignment="center"
            android:textColor="@color/white"
            />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>


</RelativeLayout>